# cpp_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
executable/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
